# traffic-congestion-simulation

./: .editorconfig  .gitignore  CMakeLists.txt
scripts/: data-parsing.nb  fix-mess.py  fundamental-diagram.nb  parameter-estimation.nb  sim.cl  sim.nb  stuff.nb  viewer.htm
src/: CMakeLists.txt  kernel.cu  kernel.h  link.h  main.cpp  main.cu  simulation.h  simulator.nb  stuff.nb
